--- a/src/containers/Header/header.css
+++ b/src/containers/Header/header.css
@@ -50,6 +50,8 @@ button.join {
 }
 
 input {
+  min-width: 0;
+  width: 290px;
   height: 47px;
   background-color: #f2f2f2;
   border: transparent;
